--- a/chocobo-breeder-ff7fs.html
+++ b/chocobo-breeder-ff7fs.html
@@ -86,7 +86,8 @@
     <!-- APPEARANCE and COLOR IS NOT IMPORTANT? -->
     <!-- 
     <h2>Appearance</h2>
-    <label>Composed<input type="radio" id="Composed" name="Appearance" value="Composed" checked></label>
+    <label>Amiable<input type="radio" id="Amiable" name="Appearance" value="Amiable" checked></label>
+    <label>Composed<input type="radio" id="Composed" name="Appearance" value="Composed"></label>
     <label>Cute<input type="radio" id="Cute" name="Appearance" value="Cute"></label>
     <label>Elegant<input type="radio" id="Elegant" name="Appearance" value="Elegant"></label>
     <label>Natural<input type="radio" id="Natural" name="Appearance" value="Natural"></label>
